.archive/apps/thanos/query-frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-query-frontend-httproute
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - thanos.home.alden.ai
  rules:
  - backendRefs:
    - name: thanos-query-frontend
      port: 9090
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
