.archive/apps/thanos/query-frontend/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: thanos-query-frontend-http
spec:
  hosts:
    - thanos.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: thanos-query-frontend
            port:
              number: 9090
